--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WebViewSample"
         tools:targetApi="31">
+
+        <meta-data android:name="android.webkit.WebView.MetricsOptOut"
+            android:value="false"/>
+        <meta-data android:name="android.webkit.WebView.EnableSafeBrowsing"
+            android:value="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
